--- a/craclk/package.json
+++ b/craclk/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.4.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "eslint": "^8",
