--- a/express/package.json
+++ b/express/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "ws": "^8.17.0"
   }
 }
